fix: fix missing-note children not showing up in note-foot; change missing-notes data format string -> hash to be uniform; move header/footer tags into includes (so note-foot.html and note-head.html's commits are mushy because it has all these changes combined -- the missing-note related changes are not easily distinguishable); update scss class 'missing-note-txt' to be '!important'.

--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -45,7 +45,8 @@
 
 .missing-note-txt {
   @include fs-2;
-  color: $grey-dk-000;
+  color: $grey-dk-000 !important;
+  pointer-events: none;
 }
 
 .small-descr {
